--- a/DanceCalc/DanceTests/DanceTests.csproj
+++ b/DanceCalc/DanceTests/DanceTests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="MeterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
