--- a/DanceCalc/DanceTests/DanceTests.csproj
+++ b/DanceCalc/DanceTests/DanceTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="MeterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TempoTests.cs" />
+    <Compile Include="DurationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
