First unit test for dance filtering Some cleanup of the dance class

--- a/DanceCalc/DanceTests/DanceTests.csproj
+++ b/DanceCalc/DanceTests/DanceTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="TempoTests.cs" />
     <Compile Include="DurationTests.cs" />
     <Compile Include="ConversdandTests.cs" />
+    <Compile Include="DanceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
