Unit tests for timer and clean up the class a bit

--- a/DanceCalc/DanceTests/DanceTests.csproj
+++ b/DanceCalc/DanceTests/DanceTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DurationTests.cs" />
     <Compile Include="ConversdandTests.cs" />
     <Compile Include="DanceTests.cs" />
+    <Compile Include="TimingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
