Unit tests for song timer

--- a/DanceCalc/DanceTests/DanceTests.csproj
+++ b/DanceCalc/DanceTests/DanceTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ConversdandTests.cs" />
     <Compile Include="DanceTests.cs" />
     <Compile Include="TimingTests.cs" />
+    <Compile Include="TimerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLib.csproj">
