--- a/DanceCalc/DanceLib/packages.config
+++ b/DanceCalc/DanceLib/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="portable-win+net403+sl40+wp" />
+  <package id="Newtonsoft.Json" version="5.0.5" targetFramework="portable-win+net403+sl40+wp" />
 </packages>
