--- a/DanceCalc/DanceLib/DanceLib.csproj
+++ b/DanceCalc/DanceLib/DanceLib.csproj
@@ -65,7 +65,7 @@
     <Compile Include="ITempStorage.cs" />
     <Compile Include="SongTimer.cs" />
     <Compile Include="SongDuration.cs" />
-    <Compile Include="Tempo.cs" />
+    <Compile Include="TempoRange.cs" />
     <Compile Include="DurationType.cs" />
     <Compile Include="Conversand.cs" />
     <Compile Include="Meter.cs" />
