--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\music4dance.Tests\packages.config" />
   <repository path="..\music4dance\packages.config" />
+  <repository path="..\SongDatabase\packages.config" />
 </repositories>
