--- a/DanceCalc/music4dance/packages.config
+++ b/DanceCalc/music4dance/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommunityEFProviderWrappers.EFProviderWrapperToolkit" version="1.0.0" targetFramework="net45" />
+  <package id="CommunityEFProviderWrappers.EFTracingProvider" version="1.0.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
