Add the concept of a group of dances

--- a/DanceCalc/DanceLib/DanceLib.csproj
+++ b/DanceCalc/DanceLib/DanceLib.csproj
@@ -80,6 +80,9 @@
       <LastGenOutput>DanceLibrary.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Content Include="dancegroups.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="dances.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
