Create a hash for song title that is loose enough that hopefully we can do some song matching, create and index of the hash code.

--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\music4dance.Tests\packages.config" />
   <repository path="..\music4dance\packages.config" />
+  <repository path="..\SDBTests\packages.config" />
   <repository path="..\SongDatabase\packages.config" />
 </repositories>
