Fix up the connection string so publishing actually works...

--- a/DanceCalc/music4dance/Web.config
+++ b/DanceCalc/music4dance/Web.config
@@ -17,7 +17,16 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  <add key="recaptchaPublicKey" value="***REMOVED***" /><add key="recaptchaPrivateKey" value="***REMOVED***" /></appSettings>
+    <!-- TheGray.com Global Key-->
+    <add key="recaptchaPublicKey" value="***REMOVED***" />
+    <add key="recaptchaPrivateKey" value="***REMOVED***" />
+    <!-- Music4Dance.Net-->
+    <!--add key="recaptchaPublicKey" value="***REMOVED***" />
+    <add key="recaptchaPrivateKey" value="***REMOVED***" /-->
+    <!-- Music4Dance.azurewebsites.Net-->
+    <!--add key="recaptchaPublicKey" value="6Lf2UOYSAAAAAPc1lIZggH0VkZdYBThBOVMaSwHu" />
+    <add key="recaptchaPrivateKey" value="6Lf2UOYSAAAAAG5yh8qVm-44_6HugI54qrk1JCdp" /-->
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -78,7 +87,8 @@
         <bindingRedirect oldVersion="0.0.0.0-5.5.0.0" newVersion="5.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
-  <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). --><legacyHMACWarning enabled="0" /><!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
+  <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
+    <legacyHMACWarning enabled="0" /><!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
 		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
