--- a/DanceCalc/music4dance/music4dance.csproj
+++ b/DanceCalc/music4dance/music4dance.csproj
@@ -220,6 +220,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SongCounts.cs" />
+    <Compile Include="ViewModels\SongMerge.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PagedList.css" />
@@ -350,6 +351,8 @@
     <Content Include="Views\Song\Create.cshtml" />
     <Content Include="Views\Song\Edit.cshtml" />
     <Content Include="Views\Song\Delete.cshtml" />
+    <Content Include="Views\Song\Merge.cshtml" />
+    <Content Include="Views\Song\SongItems.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
