--- a/DanceCalc/SongDatabase/SongDatabase.csproj
+++ b/DanceCalc/SongDatabase/SongDatabase.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Dance.cs" />
     <Compile Include="Models\DanceMusicContext.cs" />
+    <Compile Include="Models\MergeCluster.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
