Get most of the code in place to grab the info from xbox music and choose a relationship. Need to re-think how album stuff works though as multi-album affects track #, publisher, etc...

--- a/DanceCalc/music4dance/music4dance.csproj
+++ b/DanceCalc/music4dance/music4dance.csproj
@@ -356,7 +356,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Song\Index.cshtml" />
-    <Content Include="Views\Song\Details.cshtml" />
+    <Content Include="Views\Song\Details.cshtml">
+      <BrowseToURL>~/Song/Details</BrowseToURL>
+    </Content>
     <Content Include="Views\Song\Create.cshtml" />
     <Content Include="Views\Song\Edit.cshtml" />
     <Content Include="Views\Song\Delete.cshtml" />
