--- a/DanceCalc/music4dance/packages.config
+++ b/DanceCalc/music4dance/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="chosen" version="0.12.0" targetFramework="net45" />
+  <package id="chosen.jquery" version="0.12.0" targetFramework="net45" />
   <package id="CommunityEFProviderWrappers.EFProviderWrapperToolkit" version="1.0.0" targetFramework="net45" />
   <package id="CommunityEFProviderWrappers.EFTracingProvider" version="1.0.0" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.2.13293" targetFramework="net45" />
