--- a/DanceCalc/SongDatabase/SongDatabase.csproj
+++ b/DanceCalc/SongDatabase/SongDatabase.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Models\SongLog.cs" />
     <Compile Include="Models\SongProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\UndoResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
