Get create a new song working
Next step: don't do a blind create if there are reasonably close matches in the DB, give a list of matches (maybe use the merge UI) and do something additive....

--- a/DanceCalc/music4dance/music4dance.csproj
+++ b/DanceCalc/music4dance/music4dance.csproj
@@ -376,6 +376,7 @@
     <Content Include="Views\Log\RestoreResults.cshtml" />
     <Content Include="Views\Song\XboxSearch.cshtml" />
     <Content Include="Views\Log\Undo.cshtml" />
+    <Content Include="Views\Song\EditCore.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
