Get most of XBox Music integration back up and running
Remaining task is to plumb purchase info through the edit page

--- a/DanceCalc/music4dance/music4dance.csproj
+++ b/DanceCalc/music4dance/music4dance.csproj
@@ -377,6 +377,7 @@
     <Content Include="Views\Song\XboxSearch.cshtml" />
     <Content Include="Views\Log\Undo.cshtml" />
     <Content Include="Views\Song\EditCore.cshtml" />
+    <Content Include="Views\Song\DetailsCore.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
