--- a/DanceCalc/music4dance.Tests/packages.config
+++ b/DanceCalc/music4dance.Tests/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
