--- a/DanceCalc/music4dance/packages.config
+++ b/DanceCalc/music4dance/packages.config
@@ -17,7 +17,6 @@
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
@@ -25,6 +24,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="3.1.1" targetFramework="net45" />
