Log restore working again including delete, edit, create and merge

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -72,8 +72,13 @@
       <context type="m4d.Models.DanceMusicContext, m4d">
         <databaseInitializer type="m4d.Models.DanceMusicInitializer, m4d" />
       </context>
-    </contexts>
-    -->
+    </contexts>    
+    -->    
+    <!--<contexts>
+      <context type="m4d.Models.DanceMusicContext, m4d">
+        <databaseInitializer type="System.Data.Entity.DropCreateDatabaseAlways`1[[m4d.Models.DanceMusicContext, m4d]], EntityFramework" />
+      </context>
+    </contexts>-->    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v11.0" />
