Get basic purchase column working

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -218,6 +218,10 @@
     <Compile Include="Migrations\201403191906568_ExplicitModified.Designer.cs">
       <DependentUpon>201403191906568_ExplicitModified.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201403211746163_SongPurchase.cs" />
+    <Compile Include="Migrations\201403211746163_SongPurchase.Designer.cs">
+      <DependentUpon>201403211746163_SongPurchase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -245,12 +249,16 @@
     <Compile Include="ViewModels\UndoResult.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\amazon-logo.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\chosen-sprite%402x.png" />
     <Content Include="Content\chosen-sprite.png" />
     <Content Include="Content\chosen.css" />
+    <Content Include="Content\itunes-logo.png" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\xboxmusic-logo.png" />
+    <Content Include="Content\XboxMusic_AvailableOn_154X40_EN_Green_RGB.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -371,6 +379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201403191906568_ExplicitModified.resx">
       <DependentUpon>201403191906568_ExplicitModified.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201403211746163_SongPurchase.resx">
+      <DependentUpon>201403211746163_SongPurchase.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
