Get backtolist to be useful by creating a SongFilter object that is piped through the system.
This appears to be working for both Index and MergeCandidates finally...

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -25,7 +25,7 @@
       <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule"/>
     </httpModules>
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false"/>
-    <customErrors mode="On"></customErrors>
+    <customErrors mode="RemoteOnly"></customErrors>
   </system.web>
   <system.webServer>
     <modules>
