--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -246,6 +246,7 @@
     <Compile Include="ViewModels\PurchaseLink.cs" />
     <Compile Include="ViewModels\SongCounts.cs" />
     <Compile Include="ViewModels\SongDetails.cs" />
+    <Compile Include="ViewModels\SongFilter.cs" />
     <Compile Include="ViewModels\SongMerge.cs" />
     <Compile Include="ViewModels\UndoResult.cs" />
   </ItemGroup>
