Factor out model part 4: Handle AlbumDetails and Log by factoring out an IUserMap and ISongPropertyFactory interface.

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\ISongPropertyFactory.cs" />
+    <Compile Include="Models\IUserMap.cs" />
     <Compile Include="Models\ModifiedRecord.cs" />
     <Compile Include="Models\Dance.cs" />
     <Compile Include="Models\DanceMusicConfiguration.cs" />
